# dist-rust-buted

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
docs/tasks/: dst-pfm.md  svc-dsc.md  svc-mat.md
examples/: calc.rs  calc_add.rs
proto/: hello.proto  math.proto  serdict.proto
src/: lib.rs  server.rs
src/dst_pfm/: lib.rs
src/hello/: server.rs
src/svc-dsc/: client.rs  server.rs
src/svc_dsc/: client.rs  mod.rs  server.rs
src/svc_mat/: mod.rs
src/svc_mat/add/: client.rs  mod.rs  server.rs
src/svc_mat/calc/: mod.rs  parse.rs  server.rs
src/svc_mat/div/: client.rs  mod.rs  server.rs
src/svc_mat/mul/: client.rs  mod.rs  server.rs
src/svc_mat/sub/: client.rs  mod.rs  server.rs
