[package]
name = "dist-rust-buted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
  name = "hello"
  path = "src/hello/server.rs"

[[bin]]
  name = "hello-client"
  path = "src/hello/client.rs"

[[bin]]
  name = "svc-dsc"
  path = "src/svc_dsc/server.rs"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.25"
http = "0.2.8"
hyper = "0.14.23"
prost = "0.11.3"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
